Noch nicht fertig!!!

--- a/Website/index.html
+++ b/Website/index.html
@@ -1,4 +1,27 @@
+<html>
+<head>
+<title>Bikelight</title>
+ <style>
+            figure{
+                border:4px solid rgb(255,96,80);
+                background-color:red;
+                border-radius:30px;
+                color: white;
+                width:60px;
+                height:60px;
+                font-size:40px;
+            }
+        </style>
+</head>
+<body>
+<div style="color: white; font-size:48px; font-family: 'Arial'; background-color: #2F2F2F"><label><center>Bikelight</label></div>
+<div style="color: white; font-size:13px; font-family: 'Arial'; background-color: #2F2F2F; font-style: italic"><label><center><br>Ein Projekt von Farid Akbar Tabrizi, Jakob Degmair und Ruben Haag f&uuml;r Jugend forscht 2017</label></div>
+<br>
+<label style="font-family: 'Arial'">Hier k&ouml;nnen Sie ein Bild Ausw&auml;hlen:</label><br><br>
 <form action="upload.php" method="post" enctype="multipart/form-data">
 <input type="file" name="datei"><br>
+<br>
 <input type="submit" value="Hochladen"><br>
 </form>
+</body>
+</html>
