--- a/Website/index.html
+++ b/Website/index.html
@@ -1,27 +1,103 @@
 <html>
-<head>
-<title>Bikelight</title>
- <style>
-            figure{
-                border:4px solid rgb(255,96,80);
-                background-color:red;
-                border-radius:30px;
-                color: white;
-                width:60px;
-                height:60px;
-                font-size:40px;
-            }
-        </style>
-</head>
-<body>
-<div style="color: white; font-size:48px; font-family: 'Arial'; background-color: #2F2F2F"><label><center>Bikelight</label></div>
-<div style="color: white; font-size:13px; font-family: 'Arial'; background-color: #2F2F2F; font-style: italic"><label><center><br>Ein Projekt von Farid Akbar Tabrizi, Jakob Degmair und Ruben Haag f&uuml;r Jugend forscht 2017</label></div>
-<br>
-<label style="font-family: 'Arial'">Hier k&ouml;nnen Sie ein Bild Ausw&auml;hlen:</label><br><br>
-<form action="upload.php" method="post" enctype="multipart/form-data">
-<input type="file" name="datei"><br>
-<br>
-<input type="submit" value="Hochladen"><br>
-</form>
-</body>
+	<head>
+		<title>Bikelight</title>
+		<style type="text/css">
+   			ul {
+    			list-style-type: none;
+    			margin: 0;
+    			padding: 0;
+    			overflow: hidden;
+    			background-color: #2F2F2F;
+			}
+
+			li {
+    			float: left;
+			}
+
+			li a {
+    			display: block;
+    			color: white;
+    			text-align: center;
+   				padding: 14px 16px;
+    			text-decoration: none;
+			}
+
+			li a:hover:not(.active) {
+    			background-color: #FB5066;
+			}
+			.active {
+    			background-color: #4CAF50;
+			}
+   </style>
+	</head>
+	<body style="margin: 0pt">
+		<div style="background-color: #2F2F2F">
+		<br>
+			<label style="color: white; font-size:48px; font-family: 'Arial'">
+				<center>Bikelight</center>
+			</label>
+			<br>
+			<label style="color: white; font-family: 'Arial'">
+				<center>Ein Projekt von Farid Akbar Tabrizi, Jakob Degmair und Ruben Haag f&uuml;r Jugend forscht 2017</center>
+			</label>
+			<br>
+			<div style="width: 100%; font-family: 'Arial'; color: white; background: #2F2F2F; bottom: 0; font-size: 9pt"><center>Farid Akbar Tabrizi, Ruben Haag und Jakob Degmair - alle Rechte vorbehalten</center></div>
+			<br>
+
+		<ul>
+  			<li><a class="momentan" href="./index.html" style="font-family: 'Arial'">Startseite</a></li>
+  			<li><a href="./Website/bildhochladen.html" style="font-family: 'Arial'">Bild hochladen</a></li>
+  			<li><a href="./Website/montage.html" style="font-family: 'Arial'">Montageanleitung</a></li>
+  			<li><a href="./Website/kosten.html" style="font-family: 'Arial'">Kosten</a></li>
+		</ul>
+		</div>
+		<div style="top: 500px;background-color: #2F2F2F;
+				width: 17%;
+				float: left;
+				height: 1000px">
+				</div>
+				<div style="top: 500px;background-color: #2F2F2F;
+				width: 17%;
+				float: right;
+				height: 1000px">
+				</div>
+		<br>
+		<center style="margin: 0pt">
+		<div style="background-color: white; height: 500px; width: 60%">
+		
+  		<img class="diashow" src="./Bild/Beispiel.png" style="max-height: 100%;max-width: 100%">
+  		<img class="diashow" src="./Bild/Stopschild.png" style="max-height: 100%;max-width: 100%">
+  		<img class="diashow" src="./Bild/Smily3.png" style="max-height: 100%;max-width: 100%">
+  		<img class="diashow" src="./Bild/a10d65f4-1c05-486a-bddb-3542008c965d.jpg" style="max-height: 100%;max-width: 100%">
+  		
+  		</div>
+  		</center>  		
+  		<center><button onclick="plusDivs(-1)">&#10094;</button>
+		<button onclick="plusDivs(+1)">&#10095;</button></center>
+		<br><br>
+		
+		<br>
+		<label style="font-family: 'Arial'; margin-left: 3%">Grundidee</label> <br>
+		<p style="font-family: 'Arial'; font-size: 15px; margin-left: 20%; margin-right: 20%">In Deutschland gibt es nach Daten des Zweirad-Industrie-Verbands (ZIV) 72 Millionen Fahrr&auml;der und 98% der Deutschen k&ouml;nnen nach eigenen Angaben Fahrrad fahren. Trotzdem w&uuml;rden nur 38% der Deutschen mehrmals in der Woche ihr Rad nutzen. Dies liegt nach eigener Erfahrung vor allem daran, dass man sich im Stadtverkehr in einem Auto sicherer f&uuml;hlt, als auf einem Fahrrad. Nat&uuml;rlich kann man sich geeignete Kleidungsst&uuml;cke, die die eigene Sichtbarkeit erh&ouml;hen, kaufen, aber diese sind meistens l&auml;stig und sind wenig modisch. Um diese Kleidungsst&uuml;cke zu vermeiden, haben wir nach einer technisch besseren und interaktiveren L&ouml;sungsm&ouml;glichkeit gesucht. Wir dachten uns, dass die optimale L&ouml;sung ein Leuchtmittel zwischen den Speichen w&auml;re und fanden bei unserer Suche &auml;hnliche L&ouml;sungsans&auml;tze. Bei dem Besuch der Website der Firma Monkeylectrics haben wir etwas &auml;hnliches gefunden: ein Speichendisplay, das jedoch mit rund 2000&euro; nur wenige Fahrradfahrer ansprechen w&uuml;rde. Da haben wir uns gefragt, wie ein solches Speichendisplay kosteng&uuml;nstiger und besser herzustellen ist. Die Grundidee war, dass wir mit einem einfachen Raspberry Pi einen farbigen LED-Streifen ansteuern. Danach haben wir uns einen 1m langen LED-Streifen gekauft, bei dem man jede LED einzeln mit dem Raspberry Pi ansteuern kann. Der Streifen besitzt dabei eine Dichte von 144 LEDs je Meter und hat somit ausreichend viele LEDs, um ein Bild in ansprechender Aufl&ouml;sung darzustellen. Wir haben uns erhofft, eine interaktive Variante zur Warnweste zu finden, indem zum Beispiel beim &Uuml;berqueren einer Kreuzung vom Speichendisplay ein Stoppschild angezeigt wird, wodurch ein von der Seite kommender Autofahrer fr&uuml;hzeitig gewarnt wird. Das Speichendisplay und die Software sollen als Selbstbausatz f&uuml;r Fahrradfahrer aller Altersklassen zur Verf&uuml;gung gestellt werden.</p><br>
+		<center><label style="font-family: 'Arial'; font-size: 20pt">Made and designed in Berlin</label></center><br>
+		<script type = "text/javascript">
+			var slideIndex = 1;
+			showDivs(slideIndex);
+
+			function plusDivs(n) {
+  				showDivs(slideIndex += n);
+			}
+
+			function showDivs(n) {
+  				var i;
+  				var x = document.getElementsByClassName("diashow");
+  				if (n > x.length) {slideIndex = 1}    
+  				if (n < 1) {slideIndex = x.length}
+  				for (i = 0; i < x.length; i++) {
+     				x[i].style.display = "none";  
+  				}
+  				x[slideIndex-1].style.display = "block";  
+				}
+		</script>
+	</body>
 </html>
