--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
 		<div style="background-color: white; height: 500px; width: 60%">
 		
   		<img class="diashow" src="./Bild/Beispiel.png" style="max-height: 100%;max-width: 100%">
-  		<img class="diashow" src="./Bild/Stopschild.png" style="max-height: 100%;max-width: 100%">
-  		<img class="diashow" src="./Bild/Smily3.png" style="max-height: 100%;max-width: 100%">
-  		<img class="diashow" src="./Bild/a10d65f4-1c05-486a-bddb-3542008c965d.jpg" style="max-height: 100%;max-width: 100%">
+  		<img class="diashow" src="./Website/Bild/Stopschild.png" style="max-height: 100%;max-width: 100%">
+  		<img class="diashow" src="./Website/Bild/Smily3.png" style="max-height: 100%;max-width: 100%">
+  		<img class="diashow" src="./Website/Bild/a10d65f4-1c05-486a-bddb-3542008c965d.jpg" style="max-height: 100%;max-width: 100%">
   		
   		</div>
   		</center>  		
