--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@
 		<div style="top: 500px;background-color: #2F2F2F;
 				width: 17%;
 				float: left;
-				height: 1000px">
+				height: 100%">
 				</div>
 				<div style="top: 500px;background-color: #2F2F2F;
 				width: 17%;
 				float: right;
-				height: 1000px">
+				height: 100%">
 				</div>
 		<br>
 		<center style="margin: 0pt">
@@ -79,7 +79,7 @@
 		<br>
 		<label style="font-family: 'Arial'; margin-left: 3%">Grundidee</label> <br>
 		<p style="font-family: 'Arial'; font-size: 15px; margin-left: 20%; margin-right: 20%">In Deutschland gibt es nach Daten des Zweirad-Industrie-Verbands (ZIV) 72 Millionen Fahrr&auml;der und 98% der Deutschen k&ouml;nnen nach eigenen Angaben Fahrrad fahren. Trotzdem w&uuml;rden nur 38% der Deutschen mehrmals in der Woche ihr Rad nutzen. Dies liegt nach eigener Erfahrung vor allem daran, dass man sich im Stadtverkehr in einem Auto sicherer f&uuml;hlt, als auf einem Fahrrad. Nat&uuml;rlich kann man sich geeignete Kleidungsst&uuml;cke, die die eigene Sichtbarkeit erh&ouml;hen, kaufen, aber diese sind meistens l&auml;stig und sind wenig modisch. Um diese Kleidungsst&uuml;cke zu vermeiden, haben wir nach einer technisch besseren und interaktiveren L&ouml;sungsm&ouml;glichkeit gesucht. Wir dachten uns, dass die optimale L&ouml;sung ein Leuchtmittel zwischen den Speichen w&auml;re und fanden bei unserer Suche &auml;hnliche L&ouml;sungsans&auml;tze. Bei dem Besuch der Website der Firma Monkeylectrics haben wir etwas &auml;hnliches gefunden: ein Speichendisplay, das jedoch mit rund 2000&euro; nur wenige Fahrradfahrer ansprechen w&uuml;rde. Da haben wir uns gefragt, wie ein solches Speichendisplay kosteng&uuml;nstiger und besser herzustellen ist. Die Grundidee war, dass wir mit einem einfachen Raspberry Pi einen farbigen LED-Streifen ansteuern. Danach haben wir uns einen 1m langen LED-Streifen gekauft, bei dem man jede LED einzeln mit dem Raspberry Pi ansteuern kann. Der Streifen besitzt dabei eine Dichte von 144 LEDs je Meter und hat somit ausreichend viele LEDs, um ein Bild in ansprechender Aufl&ouml;sung darzustellen. Wir haben uns erhofft, eine interaktive Variante zur Warnweste zu finden, indem zum Beispiel beim &Uuml;berqueren einer Kreuzung vom Speichendisplay ein Stoppschild angezeigt wird, wodurch ein von der Seite kommender Autofahrer fr&uuml;hzeitig gewarnt wird. Das Speichendisplay und die Software sollen als Selbstbausatz f&uuml;r Fahrradfahrer aller Altersklassen zur Verf&uuml;gung gestellt werden.</p><br>
-		<center><label style="font-family: 'Arial'; font-size: 20pt">Made and designed in Berlin</label></center><br>
+		<center><label style="font-family: 'Arial'; font-size: 20pt; margin-left: 20%; margin-right: 20%">Made and designed in Berlin</label></center><br>
 		<script type = "text/javascript">
 			var slideIndex = 1;
 			showDivs(slideIndex);
