--- a/index.html
+++ b/index.html
@@ -51,12 +51,12 @@
   			<li><a href="./Website/kosten.html" style="font-family: 'Arial'">Kosten</a></li>
 		</ul>
 		</div>
-		<div style="top: 500px;background-color: #2F2F2F;
+		<div style="background-color: #2F2F2F;
 				width: 17%;
 				float: left;
 				height: 100%">
 				</div>
-				<div style="top: 500px;background-color: #2F2F2F;
+				<div style="background-color: #2F2F2F;
 				width: 17%;
 				float: right;
 				height: 100%">
