--- a/Website/bildhochladen.html
+++ b/Website/bildhochladen.html
@@ -37,8 +37,8 @@
 			}
    </style>
 	</head>
-	<body style="margin: 0pt">
-		<div style="background-color: #2F2F2F; height: 747px">
+	<body style="margin: 0pt; background-color: #2F2F2F">
+		
 		<br>
 			<label style="color: white; font-size:48px; font-family: 'Arial'">
 				<center>Bikelight</center>
@@ -57,23 +57,14 @@
   			<li><a href="./kosten.html" style="font-family: 'Arial'">Kosten</a></li>
 		</ul>
 		
-		<center>
-		<div id="box">
-		<br><br><br>
-<br><br><br>
-<br><br><br>
-<br><br><br>
-<br><br><br>
-
-				<label style="font-size: auto; font-family: 'Arial'; color: white; margin: 3%; left: 80%">Bitte verbinde dich mit dem Netzwerk des Bikelights
+		
+		<div style="width: 17vw; height: auto; float: right">
+<label style="font-size: auto; font-family: 'Arial'; color: white">Bitte verbinde dich mit dem Netzwerk des Bikelights
 				</label>
 			</div>
-			<img src="./Bild/Beispiel.png" style="position: absolute; left: 0pt; width: 80%; height: 747px">
+			<img src="./Bild/Beispiel.png" style="width: 80vw; height: auto">
 <iframe src="http://speichendisplay" style="float: right; width: 20%; height: 100%; border: none; position: absolute; left: 80%"></iframe>
 
-			
-		</center>
-		<p>hallohallos</p>
 		</div>
 		<script>
 			var slideIndex = 1;
