--- a/Website/kosten.html
+++ b/Website/kosten.html
@@ -30,8 +30,7 @@
 			}
    </style>
 	</head>
-	<body style="margin: 0pt">
-				<div style="background-color: #2F2F2F">
+	<body style="margin: 0pt; background-color: #2F2F2F">
 		<br>
 			<label style="color: white; font-size:48px; font-family: 'Arial'">
 				<center>Bikelight</center>
@@ -50,12 +49,14 @@
   			<li><a href="./kosten.html" style="font-family: 'Arial'">Kosten</a></li>
 		</ul>
 		</div>
+		<div style="background-color: white; margin-left: 17%; margin-right: 17%">
 		<br>
 		<label style="margin-left: 3%; font-family: 'Arial'; font-size: 20pt">Kosten&uuml;bersicht</label>
-		<img src="./Bild/Materialkosten_Tabelle.png" style="margin: 2%; margin-bottom: 0%; width: 30%; float: right">
-		<p style="font-size: 15pt; font-family: 'Arial'; margin-left: 3%; margin-right: 35%; margin-top: 1%">Die Kosten f&uuml;r die gesamte Konstruktion, ausgenommen der Kosten f&uuml;r einige Arbeitsschritte, wie unter anderem das L&ouml;ten, belaufen sich auf ungef&auml;hr 85&euro;. Einen Gro&szlig;teil der Kosten machen der Rasberry Pi 3 aus, der 37&euro; kostet, sowie die Platine, die etwa 20&euro;, einschlie&szlig;lich der Kosten f&uuml;r das &Auml;tzen, kostet. Die Kosten beziehen sich auf die neueste Version des Bikelights, die ohne M&auml;rklin-Metall-Halterung auskommt, da die Platine diese Funktion &uuml;bernimmt, sowie keine Kabelverbindungen mehr ben&ouml;tigt.</p>
-		<br><br><br><br>
-		<p style="margin: 2%; width: 30%; float: right; font-family: 'Arial'; font-size: 9pt">* Bei diesen Werten handelt es sich um Sch&auml;tzwerte, da die genauen Werte Ver&auml;nderungen unterliegen und deshalb nicht immer genau angegeben werden k&ouml;nnen.</p>
+		<p style="font-size: 15pt; font-family: 'Arial'; margin-left: 3%; margin-right: 3%; margin-top: 1%">Die Kosten f&uuml;r die gesamte Konstruktion, ausgenommen der Kosten f&uuml;r einige Arbeitsschritte, wie unter anderem das L&ouml;ten, belaufen sich auf ungef&auml;hr 85&euro;. Einen Gro&szlig;teil der Kosten machen der Rasberry Pi 3 aus, der 37&euro; kostet, sowie die Platine, die etwa 20&euro;, einschlie&szlig;lich der Kosten f&uuml;r das &Auml;tzen, kostet. Die Kosten beziehen sich auf die neueste Version des Bikelights, die ohne M&auml;rklin-Metall-Halterung auskommt, da die Platine diese Funktion &uuml;bernimmt, sowie keine Kabelverbindungen mehr ben&ouml;tigt.</p>
+		<br><br><center>
+		<img src="./Bild/Materialkosten_Tabelle.png" style="width: 30vw"></center>
+		<center>
+		<p style="margin: 2%; width: 30%; font-family: 'Arial'; font-size: 9pt">* Bei diesen Werten handelt es sich um Sch&auml;tzwerte, da die genauen Werte Ver&auml;nderungen unterliegen und deshalb nicht immer genau angegeben werden k&ouml;nnen.</p></center><br></div>
 		<script type = "text/javascript">
 			var slideIndex = 1;
 			showDivs(slideIndex);
