--- a/Website/bildhochladen.html
+++ b/Website/bildhochladen.html
@@ -58,7 +58,7 @@
 		</ul>
 		
 		
-		<div style="width: 17vw; height: auto; float: right">
+		<div style="width: 17vw; height: auto; float: right"><br><br><br><br><br>
 <label style="font-size: auto; font-family: 'Arial'; color: white">Bitte verbinde dich mit dem Netzwerk des Bikelights
 				</label>
 			</div>
